mysql-k8s/php-crud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-crud
  namespace: my-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-crud
  template:
    metadata:
      labels:
        app: php-crud
    spec:
      containers:
        - name: php-crud
          image: 6shihab/php-crud
          ports:
            - containerPort: 80
