mysql-k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: my-database
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
