mysql-k8s/php-crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-crud-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
  selector:
    app: php-crud
