mysql-k8s/php-crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-crud-ingress
  namespace: default
  #  annotations:
  #    nginx.ingress.kubernetes.io/rewrite-target: /
  #    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  #    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: example-tls
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-crud-service
            port:
              number: 80
